objects/nFORCE__Business_Process__c.object
<CustomObject>
    <description>This object defines the business process the system runs to orchestrate business activities. This process may consist of one or more business activities the system runs to complete a business process.</description>
    <fields>
        <fullName>nFORCE__Category__c</fullName>
        <description>The user populates this optional text field to indicate the category in which the process operates. By default, it is blank.</description>
        <inlineHelpText>This text field contains the business process type.</inlineHelpText>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Key__c</fullName>
        <description>The user populates this required unique text field to provide an identifier for business process identification purposes. By default, it is blank.</description>
        <inlineHelpText>This text field identifies a business process.</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>This field contains an external identifier that is used to associate the record with the correlating record in an external system. The Lookup Key can also be used to identify related records when importing data into nCino without the need to know the internal ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field contains the External ID for the Business Process.</inlineHelpText>
        <label>Lookup Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Business Process</label>
    <listViews>
        <fullName>nFORCE__All_Business_Processes</fullName>
        <columns>NAME</columns>
        <columns>nFORCE__Key__c</columns>
        <columns>nFORCE__Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Business Processes</label>
    </listViews>
    <nameField>
        <label>Business Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Processes</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>nFORCE__Enforce_Unique_Name</fullName>
        <active>true</active>
        <description>This validation rule enforces that the business process field name is unique.</description>
        <errorConditionFormula>AND (
			IF($Setup.nFORCE__Business_Process_Settings__c.nFORCE__Disable_Validation_Rules__c,
				FALSE,
				((ISNEW() || ISCHANGED(Name))
				&amp;&amp; VLOOKUP( $ObjectType.nFORCE__Business_Process__c.Fields.Name, $ObjectType.nFORCE__Business_Process__c.Fields.Name , Name) = Name)
			)
		)</errorConditionFormula>
        <errorMessage>The business process name must be unique. Check the name and try again.</errorMessage>
    </validationRules>
</CustomObject>